1.20.4 update (#4249)